<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_question_1" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton android:id="@+id/radio_correct_ingredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_1_A" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_1_B" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_1_C" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_question_2" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_2_A" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_2_B" />
            <RadioButton android:id="@+id/radio_correct_flour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_2_C" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_question_3" />

        <CheckBox android:id="@+id/checkbox_soft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_3_A" />

        <CheckBox android:id="@+id/checkbox_moist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_3_B" />

        <CheckBox android:id="@+id/checkbox_flaky"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_3_C" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_question_4" />

        <EditText
            android:id="@+id/answer_four"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_question_5" />

        <CheckBox android:id="@+id/checkbox_kosher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_5_A" />

        <CheckBox android:id="@+id/checkbox_fat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_5_B" />

        <CheckBox
            android:id="@+id/checkbox_lift"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_5_C" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checkAnswer"
            android:text="Check Answer"
            android:layout_marginBottom="16dp" />

    </LinearLayout>
</ScrollView>